# cadquery-simpleViewer

./: README.md  publishing.md  pyproject.toml
src/cadquery_simpleviewer/: __init__.py  plane.py  viewer.py
tests/: test_plane.py  test_viewer.py  tests.md
